--- a/src/widgets/LoginForm/style.module.scss
+++ b/src/widgets/LoginForm/style.module.scss
@@ -1,4 +1,4 @@
-.login__form {
+.loginForm {
     text-align: left;
     border-radius: 10px;
     padding: 40px;
@@ -8,7 +8,7 @@
     gap: 10px;
 }
 
-.password_button {
+.passwordShowButton {
     background: transparent;
     outline: none;
     border: none;
