--- a/src/shared/ui/CustomTypography/ui/CustomTypography.module.scss
+++ b/src/shared/ui/CustomTypography/ui/CustomTypography.module.scss
@@ -1,9 +1,9 @@
-@import "@/app/styles/breakpoints";
+@import '@/app/styles/breakpoints';
 
 .typography {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-weight: normal;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .italic {
-  font-family: "21 Cent Italic", sans-serif;
+  font-family: '21 Cent Italic', sans-serif;
   font-style: italic;
   font-weight: normal;
 }
@@ -76,8 +76,13 @@
 .textM {
   font-size: 20px;
   font-weight: normal;
-  
+
   @media screen and (max-width: map-get($breakpoints, xs)) {
     font-size: 16px;
   }
+}
+
+.small {
+  font-size: 10px;
+  color: #bebebe;
 }
