--- a/src/widgets/UsersList/ui/UsersList.module.scss
+++ b/src/widgets/UsersList/ui/UsersList.module.scss
@@ -6,6 +6,10 @@
 }
 
 .floatButton {
+  .floatButtonIcon {
+    transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  }
+
   &:hover {
     .floatButtonIcon {
       color: #1677ff;
