--- a/src/widgets/ReportTable/ui/ReportTable.module.scss
+++ b/src/widgets/ReportTable/ui/ReportTable.module.scss
@@ -8,9 +8,16 @@
   gap: 15px;
   margin-top: 20px;
 
+
   .tables {
     display: flex;
     gap: 15px;
+  }
+
+  .items {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 
   table {
