--- a/src/widgets/PieChart/ui/PieChart.module.scss
+++ b/src/widgets/PieChart/ui/PieChart.module.scss
@@ -1,6 +1,6 @@
 .root {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   gap: 15px;
   height: 350px;
